manifests/kustomize/expose-istiod.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: eastwestgateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: istiod-grpc
      port: 15012
      protocol: TLS
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: eastwestgateway-grpc
  namespace: istio-system
spec:
  parentRefs:
    - name: eastwestgateway
      kind: Gateway
      sectionName: istiod-grpc
  rules:
    - backendRefs:
        - name: istiod
          port: 15012

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: eastwestgateway-ilb
  namespace: istio-system
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  gatewayClassName: istio
  listeners:
    - name: istiod-grpc-ilb
      port: 15012
      protocol: TLS
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: eastwestgateway-grpc-ilb
  namespace: istio-system
spec:
  parentRefs:
    - name: eastwestgateway-ilb
      kind: Gateway
      sectionName: istiod-grpc-ilb
  rules:
    - backendRefs:
        - name: istiod
          port: 15012
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istiod-15012
  namespace: istio-system
spec:
  host: istiod.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 15012
        tls:
          mode: DISABLE
